syntax = "proto3";

package Producer;

service Producer {
    rpc ProduceToKartoffelQueue(ProduceRequest) returns (SuccessMessage) {}
    rpc ProduceToADQueue(ProduceRequest) returns (SuccessMessage) {}
}

message ProduceRequest{
    string id = 1;
    optional bool force = 2;
}

message SuccessMessage{
    bool success = 1;
    string message = 2;
}